minikube.yml
minikube start --driver=docker
minikube start --nodes=3 --driver=docker

minikube status

minikube stop
minikube delete

minikube docker-env
eval $(minikube docker-env)

# don't want to do this
minikube image build -t my-app .

#################################################
# Dockerfile
FROM node:18 AS builder

WORKDIR /app

COPY package*.json ./
RUN npm install

COPY app.js app.js

# Stage 2: Production
FROM node:18-alpine
WORKDIR /app

COPY --from=builder /app /app

# Creating a non root user
RUN addgroup appgroup && adduser -S appuser -G appgroup
USER appuser

# Running the Application
CMD ["node", "app.js"]

############### Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: myapp
  labels:
    name: myapp


############# Deployment
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
  namespace: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp-container
        image: dakshsawhneyy/jenkinsnodeapp:v1.0
        ports:
          - containerPort: 3000

# Service
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: nginx
spec:
  type: ClusterIP
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000


################################# Replica Set
kind: ReplicaSet
apiVersion: apps/v1
metadata:
  name: nginx-replicasets
  namespace: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      name: nginx-rep-pod
      labels:
        app: nginx

    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80


################################### Daemon Sets
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: nginx-daemonsets
  namespace: nginx
spec:
  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      name: nginx-dmn-pod
      labels:
        app: nginx

    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80

######## Nginx###### 

# Deployment NginX
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx-deployment
  namespace: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      name: nginx-dep-pod
      labels:
        app: nginx

    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
        volumeMounts:
          - mountPath: /var/www/html
            name: my-volume
      volumes:
        - name: my-volume
          persistentVolumeClaim:
            claimName: local-pvc

# Service
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

###### Volume ######
kind: PersistentVolume
apiVersion: v1
metadata:
  name: local-pv
  labels:
    app: local
spec:
  capacity:
    storage: 1Gi
  accessModes:
    - ReadWriteOnce
  persistentVolumeReclaimPolicy: Retain
  storageClassName: local-storage
  hostPath:
    path: /mnt/data 

###### Claim ######
kind: PersistentVolumeClaim
apiVersion: v1
metadata:
  name: local-pvc
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 1Gi
  storageClassName: local-storage


minikube addons enable ingress

###########################################
# Ingress

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-myapp-ingress
  namespace: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /nginx
        backend:
          service:
            name: nginx-service
            port: 
              number: 80
      - pathType: Prefix
        path: /
        backend:
          service:
            name: myapp-service
            port: 
              number: 3000

minikube ip

curl http://ip/
curl http://ip/nginx
